
P4
----------------------
* Command to correct for server time wasn't using the optional values such as the port (CC-469). Reported by Terri Paik

PropertyLabelIncrementer
----------------------
* Add attribute "defaultlabel" which is returned when property file doesn't exist (CC-470).

SVN
----------------------
* Reset modified property to null if no modifications. Patch by Paul Hammant
* Remove race condition on closing error stream.

UCM
----------------------
* Skip rmbranch and rmver events (CC-430). Patch by Olga Bondarchuk

VSS
----------------------
* Asterisks in comments no longer cause StringIndexOutOfBoundsException (CC-461).  Reported by Omair-Inam Abdul-Matin

reporting application
======================

index.jsp
----------------------
* Fix invalid comment syntax in index.jsp (CC-486). Reported by Andy Stevens
* Use fully qualified hostname for JMX server (CC-362). Index fix by Sven Strohschein

controlpanel.jsp
----------------------
* Use fully qualified hostname for JMX server (CC-362). Control Panel fix by Rajesh Patel

FileServlet
----------------------
* Fix problem where urls in directory might have double slashes. Fix by Edward Kuns

rss.jsp
----------------------
* Use RFC-822 format for dates (CC-473). Patch by Brian Egge

testdetails.xsl
----------------------
* Rewrite xsl to be more efficient. Submitted by Ivan Latysh

CruiseControl Release Notes - 2.5

general
======================
* Included build.xml target to create executable windows installer, from contrib definition (CC-314). Submitted by Julian Simpson. Should make CruiseControl-VER.exe available as a distribution.
* Updated Xerces (2.8) and Xalan (2.7) jars to fix memory leak (CC-426)

contrib
======================
* WindowsInstaller definition using nsis (CC-314). Submitted by Julian Simpson.
* Update DistributedBuildMaster to support instance reuse (CC-434). Submitted by Dan Rollo

build loop
======================