@@ -5996,6 +5996,11 @@ endlocal</pre>
             </thead>
             <tbody>
             <tr>
+                <td>executableName</td>
+                <td>No</td>
+                <td>Specify the name of the executable to invoke. Default is "scp".</td>
+            </tr>
+            <tr>
                 <td>sourceuser</td>
                 <td>Yes if sourcehost is specified</td>
                 <td>Log in to the sourcemachine as this user.</td>
